@@ -11,6 +11,7 @@ ags (0.9.9)
 	* new unit-test ags_preset_test.c
 	* new unit-test ags_recall_channel_test.c
 	* new unit-test ags_recall_channel_run_test.c
+	* new unit-test ags_recall_container_test.c
 
 ags (0.9.8)
 
